--- a/src/app/modules/home/header/header.component.html
+++ b/src/app/modules/home/header/header.component.html
@@ -1,15 +1,17 @@
 <header>
     <div class="container">
         <div class="row">
-        <div class="col-3">
-            <div class="logo">RMS</div>
+        <div class="col-6">
+            <div class="logo">Gurukripa Water Suppliers</div>
         </div>
-        <div class="col-9">
+        <div class="col-6">
             <div class="navigation-bg float-right">
                 <ul>
-                    <li><a routerLink="/" routerLinkActive="active">Home</a></li>
-                    <li><a routerLink="/contact" routerLinkActive="active">Contact Us</a></li>
-                    <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
+                    <li><a routerLink="/" routerLinkActive="active"  [routerLinkActiveOptions]="{exact:
+                        true}">Home</a></li>
+                    <li><a routerLink="contact" routerLinkActive="active"  [routerLinkActiveOptions]="{exact:
+                        true}">Contact Us</a></li>
+                    <li><a >Book</a></li>
                 </ul>
             </div>
         </div>
