--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,39 +1,18 @@
 
-         
-
-                    <div class="row">
-                        <div class="col-lg-6 col-md-6">
-                            <h1><span>We help you to</span> <span>manage Your</span> <span> resource Availability</span>
-                            </h1>
-                        </div>
-
-                        <div class="col-lg-6 col-md-6">
-                            <div class="video-frame">
-                                <img src="../assets/img/work.png">
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col-lg-12 text-center">
-                            <h2>What we cover</h2>
-                        </div>
-
-
-                        <div class="col-lg-12 text-center">
-                            <div class="box-containerbg">
-                                <div class="covering-box">
-                                    <div class="icon-bg"><img src="../assets/img/time-management.png"
-                                            alt="time-management" /></div>
-                                    <h3>Resource <br> Management</h3>
-                                </div>
-                                <div class="covering-box">
-                                    <div class="icon-bg"><img src="../assets/img/time-management.png"
-                                            alt="time-management" /></div>
-                                    <h3>Meeting <br> Management</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-               
+          <div class="row">
+              <div class="col-lg-12">
+                <app-carousel></app-carousel>
+              </div>
+          </div>
+          <div class="row about-box">
+            <div class="col-lg-4">
+              <img src="../../../../assets/img/about.jpg" alt="about">
+            </div>
+              <div class="col-lg-8 welcome-box">
+                <h1>About US</h1>
+                <p>Gurukripa Water Suppliers A well maintained fleet of tankers, experienced staff and a well spread sourcing of water has helped us build a strong clientele ranging from various corporate houses, factories to different co-operative housing societies.</p>
+                <p>Reliability, experience and a capacity to serve more than 20 lakh liters of water per day from diversified sources is what makes us the chosen one when it comes to incorporate different forms of water requirements at reasonable costs.</p>
+              </div>
+          </div>
+      
+   
