--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -14,5 +14,33 @@
                 <p>Reliability, experience and a capacity to serve more than 20 lakh liters of water per day from diversified sources is what makes us the chosen one when it comes to incorporate different forms of water requirements at reasonable costs.</p>
               </div>
           </div>
+
+          <div class="row services-box">
+              <div class="col-lg-12">
+                <h1>Services</h1>
+                <p>Regular un-interrupted supply of water for both residential and industrial purposes is a big challenge in a populous city like Mumbai. Even places where supply is regular, getting enough water to meet all the requirements is not guaranteed. There are also instances of sudden pipeline bursts leading to an intense water shortage in the areas affected by the burst.</p>
+                <p>Visha Transport Company provides tanker water solution for all of the above purposes.
+We supply Industrial water (water from bore wells) and Portable water for drinking purposes.
+We also provide stainless steel tankers for transportation of DM water and drinking water.</p>
+ <p> Water Tankers are also provided with 24 hours wait service if need be.</p>
+              </div>
+          </div>
+              <div class="row">
+                <div class="col-lg-3">
+                  <div class="product">Drinking water</div>
+                </div>
+                <div class="col-lg-3">
+                  <div class="product">BMC Drink water</div>
+                </div>
+                <div class="col-lg-3">
+                  <div class="product">Borewell water</div>
+                </div>
+                <div class="col-lg-3">
+                  <div class="product">Filter water</div>
+                </div>
+              </div>
+          
+        
+
       
    
