--- a/src/app/modules/home/contact/contact.component.html
+++ b/src/app/modules/home/contact/contact.component.html
@@ -1,30 +1,47 @@
 
-
         <div class="row">
-            <div class="col-6">
-                <h2 class="form-signin-heading">Contact Information</h2>
+            <div class="col-lg-12">
+                <div class="mapbg">
+                <div style="width: 100%"><div style="width: 100%"><iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=350&amp;hl=en&amp;q=101%20Platinum%20plaza%20Pu%204+(Water%20Suppliers)&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe></div></div>
+            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-4">
+                <h2 class="form-signin-heading">Contact</h2>
                 <div class="infobox">
                     <ul>
-                        <li><i class="fa fa-facebook" aria-hidden="true"></i>contact@indoreai.com</li>
-                        <li><i class="fa fa fa-mobile"></i>+91-808-584-6225</li>
-                        <li><i class="fa fa-map-marker"></i>101 Platinum plaza Pu 4,<br>
+                        <li><i class="fa fa-phone" aria-hidden="true"></i>+91 975 411 8024</li>
+                        <li><i class="fa fa-phone" aria-hidden="true"></i>+91 975 566 3234</li>
+                        <li><i class="fa fa-envelope-o" aria-hidden="true"></i>contact@indoreai.com</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-4">
+                <h2 class="form-signin-heading">Address</h2>
+                <div class="infobox">
+                    <ul>
+                        <li><i class="fa fa-map-marker" aria-hidden="true"></i>101 Platinum plaza Pu 4,<br>
                             Behind C21 Mall, Scheme 54 PU4,<br>
                             Indore, Madhya Pradesh 452010</li>
                     </ul>
                 </div>
             </div>
-            <div class="col-6">
-                <h2 class="form-signin-heading">Contact US</h2>
-                <form class="form-register">
-                    <input type="text" class="form-control" name="username" placeholder="Full Name" required=""
-                        autocomplete="off" />
-                    <input type="text" class="form-control" name="email" placeholder="Email Address" required=""
-                        autocomplete="off" />
-                    <input type="tel" class="form-control" name="phone" placeholder="Phone Number" requiberred=""
-                        autocomplete="off" />
-                    <textarea class="form-control" placeholder="Message" autocomplete="off"></textarea>
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
-                </form>
+
+            <div class="col-4">
+                <h2 class="form-signin-heading">Opening Hours</h2>
+                <div class="opening-box">
+                    <ul>
+                        <li><span>Mon:</span>Open 24 hours</li>
+                        <li><span>Tue:</span>Open 24 hours</li>
+                        <li><span>Wed:</span>Open 24 hours</li>
+                        <li><span>Thu:</span>Open 24 hours</li>
+                        <li><span>Fri:</span>Open 24 hours</li>
+                        <li><span>Sat:</span>Open 24 hours</li>
+                        <li><span>Sun:</span>Open 24 hours</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
