--- a/src/app/modules/home/home/home.component.scss
+++ b/src/app/modules/home/home/home.component.scss
@@ -8,3 +8,8 @@
     }
     img{width: 100%;}
 }
+.services-box{padding-top: 50px;
+    h1{text-align: center;}
+}
+.product{width: 100%; height: 100px; background: #fff; border: solid 1px #fff;margin-bottom: 20px; font-size: 22px;
+    box-shadow: 0px 1px 6px 1px rgba(0,0,0,0.15); justify-content: center; display: flex;align-items: center;}
