--- a/src/app/modules/home/contact/contact.component.html
+++ b/src/app/modules/home/contact/contact.component.html
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-4">
+            <div class="col-lg-4 col-md-4 col-sm-6">
                 <h2 class="form-signin-heading">Contact</h2>
                 <div class="infobox">
                     <ul>
@@ -18,7 +18,7 @@
                 </div>
             </div>
 
-            <div class="col-4">
+            <div class="col-lg-4 col-md-5 col-sm-6">
                 <h2 class="form-signin-heading">Address</h2>
                 <div class="infobox">
                     <ul>
@@ -29,7 +29,7 @@
                 </div>
             </div>
 
-            <div class="col-4">
+            <div class="col-lg-3 col-md-3 col-sm-6">
                 <h2 class="form-signin-heading">Opening Hours</h2>
                 <div class="opening-box">
                     <ul>
