--- a/src/app/modules/home/home-loader/home-loader.component.scss
+++ b/src/app/modules/home/home-loader/home-loader.component.scss
@@ -1,2 +1,2 @@
-.mainPagebg{position: relative;height: calc(100vh - 108px); overflow: auto; margin-bottom: 20px;}
+.mainPagebg{position: relative; margin-bottom: 20px; padding-top: 50px;}
 .page-container{background: #fff;position: relative;z-index: 1;}
