--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -5,10 +5,10 @@
               </div>
           </div>
           <div class="row about-box">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-4 about-img">
               <img src="../../../../assets/img/about.jpg" alt="about">
             </div>
-              <div class="col-lg-8 welcome-box">
+              <div class="col-lg-8 col-md-8 welcome-box">
                 <h1>About US</h1>
                 <p>Gurukripa Water Suppliers A well maintained fleet of tankers, experienced staff and a well spread sourcing of water has helped us build a strong clientele ranging from various corporate houses, factories to different co-operative housing societies.</p>
                 <p>Reliability, experience and a capacity to serve more than 20 lakh liters of water per day from diversified sources is what makes us the chosen one when it comes to incorporate different forms of water requirements at reasonable costs.</p>
@@ -26,16 +26,16 @@ We also provide stainless steel tankers for transportation of DM water and drink
               </div>
           </div>
               <div class="row">
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                   <div class="product">Drinking water</div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                   <div class="product">BMC Drink water</div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                   <div class="product">Borewell water</div>
                 </div>
-                <div class="col-lg-3">
+                <div class="col-lg-3 col-md-6">
                   <div class="product">Filter water</div>
                 </div>
               </div>
