--- a/src/app/modules/home/contact/contact.component.scss
+++ b/src/app/modules/home/contact/contact.component.scss
@@ -4,11 +4,16 @@ ul{
         i{position: absolute; top: 10px; left: 0; font-size: 20px; color: #72c571;}
     }
 }
-.mapbg{width: 100%;border: solid 1px #e2e2e2; margin-bottom: 30px; margin-top: 20px;}
+.mapbg{width: 100%;border: solid 1px #e2e2e2; margin-bottom: 30px; margin-top: 10px;}
 .opening-box{
     ul {
         li{font-size: 14px; padding:2px 0;
-            span{font-weight: bold; width: 45px; float: left;}
+            span{font-weight: 500; width: 45px; float: left;}
         }
     }
 }
+
+@media screen and (max-width: 992px) {
+    .form-signin-heading{font-size: 20px !important;}
+  }
+
