--- a/src/app/modules/home/header/header.component.scss
+++ b/src/app/modules/home/header/header.component.scss
@@ -1,20 +1,48 @@
 header{
-    background: #fff;
+    position: fixed; top: 0;z-index: 99; background: #fff;
     width: 100%;border-bottom: solid 1px #efefef;
-    .logo{font-size:20px; line-height: 20px; color: #2481c9;padding: 12px 0 15px 0;}
-    .navigation-bg{padding:0;
-    ul{
-        padding: 0;
-        margin: 0;
-        li{list-style: none; display: inline-block; padding: 0 20px;
-            :last-child{padding-right: 0;}
-            a{color: #2481c9; height: 47px;display: inline-block; line-height: 46px;}
-            :hover, .active{color: #2481c9; border-bottom: solid 2px #2481c9;}
-            @media only screen and (max-width: 420px) {
-                padding: 0 8px;
-            }
+        .navbar{width: 100%;padding:0;
+            .logo{font-size:20px; line-height: 20px; color: #2481c9;padding: 12px 0 15px 0;}
+                ul{
+                    padding: 0;
+                    margin: 0 15px 0 0;
+                    li{list-style: none; display: inline-block; padding: 0 10px;
+                        :last-child{padding-right: 0;}
+                        a{color: #2481c9 !important; height: 47px;display: inline-block; line-height:32px;padding-left: 0;}
+                        :hover, .active{color: #2481c9 !important; border-bottom: solid 2px #2481c9;}
+                        @media only screen and (max-width: 420px) {
+                            padding: 0 8px;
+                        }
+                    }
+                
+                }
         }
+    .book-now{background:transparent; cursor: pointer; padding: 0; float: right; margin-left: 15px;
+        a{color: #fff !important;height: 36px;padding: 9px 22px;background: #2481c9;line-height: 18px; border-radius: 40px;}
     }
 }
-}
   
+@media screen and (max-width: 991px) {
+    header{height: 41px;
+        .navbar {
+         display: block !important;padding:0 15px;
+        .navbar-brand{margin-top: 4px;}
+        .navbar-toggler{float: right; margin-left: 15px; padding: 0 4px; margin-top: 4px;}
+        .book-now{position: absolute; top: 10px; right: 70px;
+            a{padding: 5px 15px;}    
+        }
+        .navbar-collapse{background:rgba(0, 0, 0, 0.5); margin-top: 8px;
+            ul{margin: 0;
+                li{
+                    a{width: 100%; color: #fff !important;}
+                    .active{border-bottom:none !important;}
+                }
+            }
+        }
+        }
+    }
+  }
+  @media screen and (max-width: 991px) {
+    .navbar-brand{font-size: 16px;}
+
+  }
