--- a/src/app/modules/home/home/home.component.scss
+++ b/src/app/modules/home/home/home.component.scss
@@ -13,3 +13,18 @@
 }
 .product{width: 100%; height: 100px; background: #fff; border: solid 1px #fff;margin-bottom: 20px; font-size: 22px;
     box-shadow: 0px 1px 6px 1px rgba(0,0,0,0.15); justify-content: center; display: flex;align-items: center;}
+
+@media screen and (max-width: 991px) {
+    .about-box{padding-top: 15px;padding-bottom:15px;
+            .welcome-box{padding-top: 0;}
+    }
+    .services-box{padding-top: 20px; margin-bottom: 20px;}
+}
+
+@media screen and (max-width: 767px) {
+    .about-box{
+            .welcome-box{padding-top: 10px;}
+            .about-img{display: none;}
+    }
+    
+}
