--- a/src/app/modules/home/home/home.component.scss
+++ b/src/app/modules/home/home/home.component.scss
@@ -1,6 +1,6 @@
 
 .about-box{
-    padding-top: 50px;background:#f6f6f6;
+    margin-top: 50px;background:#f6f6f6;
     .welcome-box{
        padding-top: 30px;
         h1{line-height: 32px;}
