--- a/src/app/shared/modal/modal.component.scss
+++ b/src/app/shared/modal/modal.component.scss
@@ -1,7 +1,16 @@
+::ng-deep .mat-button-focus-overlay {background-color: transparent;}
 ::ng-deep mat-dialog-container{position: relative;padding-top: 55px !important;overflow:hidden !important;}
-::ng-deep .mat-dialog-title{position: absolute; top: 0; left: 0; border-bottom: solid 1px #ddd; width: 100%;height:40px;
+::ng-deep .mat-dialog-title{position: absolute; top: 0; left: 0; width: 100%;height:40px;
 padding-left: 24px;line-height: 40px !important; border-bottom: solid 1px #ebebeb;font-size: 16px !important;}
 ::ng-deep .close-btn{position: absolute !important; top: 0; right: 0; padding: 0 !important; min-width: inherit !important; width: 40px; height: 40px !important; 
     line-height: 15px !important; border-radius: 0 !important; color: #fa7e7e;}
 .submit-btn{width: 100%;}
-.form-row{margin: 0;}
+.form-row{margin: 0;position: relative;
+    label{width: 100%;}
+    input, textarea{width: 100%;}
+    select{padding-left: 7px !important;}
+    .validation-error{font-size: 10px; position: absolute; bottom: -2px;color: #ff0000; width: 100%; text-align:right;}
+}
+.date-box{width: 100%; display: flex;
+   ::ng-deep .mat-icon-button{width: 32px; height: 32px; background: #3f51b5; color: #fff;border-radius: 0; line-height: 10px;}
+}
