--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -1,9 +1,5 @@
-<div class="dashboard">
-    <div class="container-fluid">
+
         <div class="row">
-            <div class="col-lg-4">Dashboard</div>
-            <div class="col-lg-4">Dashboard</div>
-            <div class="col-lg-4">Dashboard</div>
+            <div class="col-lg-12"><h2>Dashboard</h2></div>
         </div>
-    </div>
-</div>
+        
