--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,14 +25,20 @@ body textarea{height: 200px;}
 
 .button-common{font-size: 16px; border: solid 1px #d5d5d5; color: #7a7a7a; width: 26px; height: 26px; background: none; border-radius: 2px;}
 .button-common:hover{border-color: #2481c9; color: #2481c9;}
-.mat-flat-button.mat-primary{background: #2481c9;height: 30px; line-height: 10px;font-weight: 400;}
+.mat-flat-button.mat-primary{background: #2481c9;height: 30px; line-height: 10px;font-weight: 400; border-radius: 3px !important;}
 .mat-flat-button.mat-primary:hover{background:#5e8fb5;}
 
 app-dashboard-container{float: left; width: 100%; clear: both;
     app-header{width: 100%;}
     app-sidebar{width: 225px; height: calc(100vh - 40px); background: #fff; float: left;position: absolute; left: 0;transition: transform .3s ease-in-out,width .3s ease-in-out;}
-    app-admin{height: calc(100vh - 40px); width: 100%; float: left; padding-left: 240px;transition: transform .3s ease-in-out,padding .3s ease-in-out;background: #f1f2f7;overflow: hidden;}
+    app-admin{height: calc(100vh - 40px); width: 100%; float: left; padding-left: 240px;transition: transform .3s ease-in-out,padding .3s ease-in-out;background: #f1f2f7;overflow: hidden;
+    padding-right: 15px;
+    }
+    .admin-top{
+        button{margin-top: 10px;}
+    }
 }
+
 .sidebar-collapse{
     app-sidebar{width: 40px;}
     app-admin{padding-left: 55px;}
