--- a/src/app/modules/dashboard/vehicel/vehicel.component.html
+++ b/src/app/modules/dashboard/vehicel/vehicel.component.html
@@ -1,5 +1,8 @@
-<div class="row">
-    <div class="col-lg-12">
-        <h2>Register your Vehicel</h2>
-    </div>
+<div class="row admin-top">
+        <div class="col-lg-8">
+            <h2>Register your Vehicel</h2>
+        </div>
+        <div class="col-lg-4 text-right">
+            <button mat-flat-button color="primary">Register Vehicel</button>
+        </div>
 </div>
