--- a/src/app/modules/dashboard/shared/sidebar/sidebar.component.html
+++ b/src/app/modules/dashboard/shared/sidebar/sidebar.component.html
@@ -1,4 +1,5 @@
-<ul>
+<p-panelMenu [model]="items" [style]="{'width':'100%'}"></p-panelMenu>
+<!-- <ul>
     <li><a routerLink="dashboard" routerLinkActive="active"><i class="fa fa-tachometer" aria-hidden="true"></i> <span>Dashboard</span></a></li>
     <li><a routerLink="vehicel" routerLinkActive="active"><i class="fa fa-bus" aria-hidden="true"></i> <span>Vehicle Registration</span></a></li>
     <li><a routerLink="role" routerLinkActive="active"><i class="fa fa-unlock-alt" aria-hidden="true"></i> <span>Role management</span></a></li>
@@ -7,4 +8,4 @@
     <li><a routerLink="invoice" routerLinkActive="active"><i class="fa fa-file-text" aria-hidden="true"></i> <span>Invoice </span></a></li>
     <li><a routerLink="payment" routerLinkActive="active"><i class="fa fa-money" aria-hidden="true"></i> <span>Payment</span></a></li>
     <li><a routerLink="rate" routerLinkActive="active"><i class="fa fa-clock-o" aria-hidden="true"></i> <span>Rate Schedule</span></a></li>
-</ul>
+</ul> -->
