--- a/src/app/modules/dashboard/vehicel/vehicel.component.html
+++ b/src/app/modules/dashboard/vehicel/vehicel.component.html
@@ -3,6 +3,15 @@
             <h2>Register your Vehicel</h2>
         </div>
         <div class="col-lg-4 text-right">
-            <button mat-flat-button color="primary">Register Vehicel</button>
+            <button mat-flat-button color="primary" (click)="openDialog()">Register Vehicel</button>
         </div>
+</div>
+<div class="row">
+    <div class="col-lg-12">
+        <ag-grid-angular
+        class="ag-theme-alpine ag-grid"
+        [rowData]="rowData" 
+        [columnDefs]="columnDefs">
+    </ag-grid-angular>
+    </div>
 </div>
