--- a/src/app/modules/dashboard/shared/header/header.component.html
+++ b/src/app/modules/dashboard/shared/header/header.component.html
@@ -5,7 +5,17 @@
                 <span class="logo-name">RMS</span>
                 <button type="button" class="button-common"><i class="fa fa-bars" aria-hidden="true" (click)="navigationClick()"></i></button>
             </div>
-            <div class="col-lg-9"></div>
+            <div class="col-lg-9">
+                <ul>
+                    <li>
+                         <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+                        <mat-menu #menu="matMenu">
+                          <button mat-menu-item>Item 1</button>
+                          <button mat-menu-item>Item 2</button>
+                        </mat-menu>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </header>
