--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -30,7 +30,7 @@
       <span class="validation-error"></span>
   </div>
   <div class="form-row">
-    <label for="phonenumber" class="form-label">Tanker Capacity</label>
+    <label for="phonenumber" class="form-label">Water Required(Litter)</label>
     <select class="form-control" id="capacity">
       <option>1000</option>
       <option>2000</option>
@@ -38,7 +38,7 @@
       <option>4000</option>
       <option>5000</option>
     </select>
-    <span class="validation-error">Please Enter correct OTP</span>
+    <span class="validation-error">Please Enter Water</span>
   </div>
 
   <div class="form-row date-row">
