--- a/src/app/modules/dashboard/vehicel/vehicel.component.html
+++ b/src/app/modules/dashboard/vehicel/vehicel.component.html
@@ -7,11 +7,14 @@
         </div>
 </div>
 <div class="row">
-    <div class="col-lg-12">
+    <div class="col-lg-6">
         <ag-grid-angular
         class="ag-theme-alpine ag-grid"
         [rowData]="rowData" 
         [columnDefs]="columnDefs">
     </ag-grid-angular>
+    </div>
+    <div class="col-lg-6">
+        <div class="vehicel-detail"></div>
     </div>
 </div>
