--- a/src/app/modules/dashboard/vehicel/vehicel.component.scss
+++ b/src/app/modules/dashboard/vehicel/vehicel.component.scss
@@ -1,2 +1,3 @@
 .mat-flat-button.mat-primary{background: #2481c9;height: 30px; line-height: 10px;font-weight: 400; border-radius: 0;}
 .mat-flat-button.mat-primary:hover{background:#5e8fb5;}
+.vehicel-detail{border: solid 1px #ddd;height: 400px;background: #fff;}
