--- a/src/app/modules/home/home-loader/home-loader.component.scss
+++ b/src/app/modules/home/home-loader/home-loader.component.scss
@@ -1,2 +1,7 @@
-.mainPagebg{position: relative; margin-bottom: 20px; padding-top: 50px;}
+.mainPagebg{position: relative; margin-bottom: 20px; padding-top: 70px;overflow: hidden;}
+.mainPagebg::after{position: absolute; width:700px; height: 700px; background: #b3ecfc; display: block; content: ''; top: -150px; right: -140px;
+border-radius: 100%;border: solid 60px #fff;}
+.mainPagebg::before{position: absolute; width:900px; height: 900px; background: #b3ecfc; display: block; content: ''; top: -150px; right: -140px;
+    border-radius: 100%;}
+
 .page-container{background: #fff;position: relative;z-index: 1;}
