--- a/src/app/modules/dashboard/shared/header/header.component.html
+++ b/src/app/modules/dashboard/shared/header/header.component.html
@@ -8,10 +8,13 @@
             <div class="col-lg-9">
                 <ul>
                     <li>
-                         <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+                        <button mat-button [matMenuTriggerFor]="menu">
+                            <img src="../../../../../assets/img/Avatar.png" alt="Avatar">
+                            <span>Welcome Admin</span>
+                        </button>
                         <mat-menu #menu="matMenu">
-                          <button mat-menu-item>Item 1</button>
-                          <button mat-menu-item>Item 2</button>
+                          <button mat-menu-item>Profile</button>
+                          <button mat-menu-item>Log out</button>
                         </mat-menu>
                     </li>
                 </ul>
