--- a/src/app/modules/dashboard/shared/sidebar/sidebar.component.scss
+++ b/src/app/modules/dashboard/shared/sidebar/sidebar.component.scss
@@ -11,15 +11,54 @@ ul{float: left; width: 100%; margin-bottom: 0;
         }
     }
 }
+.parentMenu{
+    > a{position: relative;}
+    > a:after{position: absolute;display: block; content: "\f104"; width: 16px; height: 16px; right: 10px;top: 50%;
+        margin-top: -8px; font: normal normal normal 18px/1 FontAwesome;text-align: center;line-height: 15px;
+    }
+}
+#submenu{overflow: hidden; 
+    li{
+        a{padding-left: 34px;}
+    }
+}
+
 ::ng-deep .sidebar-collapse {
 li{
     span{display: none;}
+    > a{text-align: center; display: block !important; text-align: center;
+        i{margin-right: 0 !important;}
+    }
+    > a:after{display: none !important;}
+    #submenu{display: none; text-align: left;
+        li{
+            a{text-align: left;}
+        }
+    }
+    }
+.sidebar-menu{
+    li{
+    > a:hover{
+        span{display: block;width: 180px;text-align: left;
+            float: left;
+            position: absolute;
+            background: #56a0d9;
+            height: 33.5px;
+            top: 0;
+            z-index: 2;
+            left: 40px;
+            padding-left: 15px;
+            padding-top: 9px;}
+    }
+}
+}
+#submenu{position:absolute;background: #fff; border: solid 1px #ddd; left: 40px;z-index: 1;width: 180px;padding: 0;top:33px;
+    li{padding-left: 0;
+        a{padding-left: 24px;}
+    }
 }
 }
 
 
 
-#display-property{
-    display: none;
-}
 
