--- a/src/app/modules/dashboard/vehicel/vehicel.component.html
+++ b/src/app/modules/dashboard/vehicel/vehicel.component.html
@@ -15,6 +15,27 @@
     </ag-grid-angular>
     </div>
     <div class="col-lg-6">
-        <div class="vehicel-detail"></div>
+        <div class="vehicel-detail">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <span>Vehicle Number :</span>
+                        <span>MP 09 AR 9343</span>
+                    </div>              
+                    <div class="col-lg-6">
+                        <span>Water Capacity :</span>
+                        <span>1000 Litter</span>
+                    </div>
+                    <div class="col-lg-6">
+                        <span>Current Status :</span>
+                        <span class="available">Available</span>
+                    </div>
+                    <div class="col-lg-6">
+                        <span>Current Status :</span>
+                        <span class="booked">Booked</span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
