--- a/src/app/modules/home/header/header.component.html
+++ b/src/app/modules/home/header/header.component.html
@@ -17,10 +17,15 @@
                       <a class="nav-link" routerLink="contact" routerLinkActive="active"  [routerLinkActiveOptions]="{exact:
                         true}" data-toggle="collapse" data-target=".navbar-collapse.show">Contact Us</a>
                     </li>
+
+                    <li class="nav-item">
+                      <a class="nav-link" (click)="openDialog()" class="book-now">Book</a>
+                    </li>
+
                   </ul>
                  
                 </div>
-                <span class="book-now"><a (click)="openDialog()">Book</a></span>
+                <!-- <span class="book-now"><a (click)="openDialog()">Book</a></span> -->
               </nav>
         </div>
     </div>
